@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2002/09/11 00:01:29 jlam Exp $
+@comment $NetBSD: PLIST,v 1.2 2004/02/22 17:34:49 jdolecek Exp $
 bin/hpijs
 share/doc/html/hpijs/gs_hpijs.png
 share/doc/html/hpijs/hpijs_readme.html
@@ -6,23 +6,29 @@ share/ppd/HP-2000C-hpijs.ppd.gz
 share/ppd/HP-2500C-hpijs.ppd.gz
 share/ppd/HP-2500CM-hpijs.ppd.gz
 share/ppd/HP-Business_Inkjet_1100-hpijs.ppd.gz
+share/ppd/HP-Business_Inkjet_1200-hpijs.ppd.gz
 share/ppd/HP-Business_Inkjet_2200-hpijs.ppd.gz
 share/ppd/HP-Business_Inkjet_2230-hpijs.ppd.gz
 share/ppd/HP-Business_Inkjet_2250-hpijs.ppd.gz
 share/ppd/HP-Business_Inkjet_2250TN-hpijs.ppd.gz
 share/ppd/HP-Business_Inkjet_2280-hpijs.ppd.gz
+share/ppd/HP-Business_Inkjet_2300-hpijs.ppd.gz
 share/ppd/HP-Business_Inkjet_2600-hpijs.ppd.gz
 share/ppd/HP-Business_Inkjet_3000-hpijs.ppd.gz
 share/ppd/HP-Color_Inkjet_Printer_CP1160-hpijs.ppd.gz
 share/ppd/HP-Color_Inkjet_Printer_CP1700-hpijs.ppd.gz
 share/ppd/HP-Color_LaserJet_2500-hpijs.ppd.gz
+share/ppd/HP-Color_LaserJet_2550-hpijs.ppd.gz
 share/ppd/HP-Color_LaserJet_4500-hpijs.ppd.gz
 share/ppd/HP-Color_LaserJet_4550-hpijs.ppd.gz
 share/ppd/HP-Color_LaserJet_4600-hpijs.ppd.gz
 share/ppd/HP-Color_LaserJet_5-hpijs.ppd.gz
 share/ppd/HP-Color_LaserJet_5000-hpijs.ppd.gz
 share/ppd/HP-Color_LaserJet_5500-hpijs.ppd.gz
+share/ppd/HP-Color_LaserJet_5550-hpijs.ppd.gz
+share/ppd/HP-Color_LaserJet_5M-hpijs.ppd.gz
 share/ppd/HP-Color_LaserJet_8550GN-hpijs.ppd.gz
+share/ppd/HP-Color_LaserJet_9500_MFP-hpijs.ppd.gz
 share/ppd/HP-DesignJet_ColorPro_CAD-hpijs.ppd.gz
 share/ppd/HP-DeskJet_1100C-hpijs.ppd.gz
 share/ppd/HP-DeskJet_1120C-hpijs.ppd.gz
@@ -42,10 +48,12 @@ share/ppd/HP-DeskJet_3558-hpijs.ppd.gz
 share/ppd/HP-DeskJet_3650-hpijs.ppd.gz
 share/ppd/HP-DeskJet_3658-hpijs.ppd.gz
 share/ppd/HP-DeskJet_3668-hpijs.ppd.gz
+share/ppd/HP-DeskJet_3740-hpijs.ppd.gz
 share/ppd/HP-DeskJet_3810-hpijs.ppd.gz
 share/ppd/HP-DeskJet_3816-hpijs.ppd.gz
 share/ppd/HP-DeskJet_3820-hpijs.ppd.gz
 share/ppd/HP-DeskJet_3822-hpijs.ppd.gz
+share/ppd/HP-DeskJet_3840-hpijs.ppd.gz
 share/ppd/HP-DeskJet_400-hpijs.ppd.gz
 share/ppd/HP-DeskJet_420C-hpijs.ppd.gz
 share/ppd/HP-DeskJet_450-hpijs.ppd.gz
@@ -63,6 +71,7 @@ share/ppd/HP-DeskJet_5551-hpijs.ppd.gz
 share/ppd/HP-DeskJet_5650-hpijs.ppd.gz
 share/ppd/HP-DeskJet_5652-hpijs.ppd.gz
 share/ppd/HP-DeskJet_5670-hpijs.ppd.gz
+share/ppd/HP-DeskJet_5740-hpijs.ppd.gz
 share/ppd/HP-DeskJet_5850-hpijs.ppd.gz
 share/ppd/HP-DeskJet_600-hpijs.ppd.gz
 share/ppd/HP-DeskJet_610C-hpijs.ppd.gz
@@ -74,13 +83,17 @@ share/ppd/HP-DeskJet_630C-hpijs.ppd.gz
 share/ppd/HP-DeskJet_632C-hpijs.ppd.gz
 share/ppd/HP-DeskJet_640C-hpijs.ppd.gz
 share/ppd/HP-DeskJet_648C-hpijs.ppd.gz
+share/ppd/HP-DeskJet_6520-hpijs.ppd.gz
+share/ppd/HP-DeskJet_6540-hpijs.ppd.gz
 share/ppd/HP-DeskJet_656C-hpijs.ppd.gz
 share/ppd/HP-DeskJet_660C-hpijs.ppd.gz
 share/ppd/HP-DeskJet_670C-hpijs.ppd.gz
 share/ppd/HP-DeskJet_670TV-hpijs.ppd.gz
 share/ppd/HP-DeskJet_672C-hpijs.ppd.gz
+share/ppd/HP-DeskJet_6800-hpijs.ppd.gz
 share/ppd/HP-DeskJet_680C-hpijs.ppd.gz
 share/ppd/HP-DeskJet_682C-hpijs.ppd.gz
+share/ppd/HP-DeskJet_6840-hpijs.ppd.gz
 share/ppd/HP-DeskJet_690C-hpijs.ppd.gz
 share/ppd/HP-DeskJet_692C-hpijs.ppd.gz
 share/ppd/HP-DeskJet_693C-hpijs.ppd.gz
@@ -134,13 +147,18 @@ share/ppd/HP-LaserJet_1015-hpijs.ppd.gz
 share/ppd/HP-LaserJet_1100-hpijs.ppd.gz
 share/ppd/HP-LaserJet_1100A-hpijs.ppd.gz
 share/ppd/HP-LaserJet_1150-hpijs.ppd.gz
+share/ppd/HP-LaserJet_1160-hpijs.ppd.gz
 share/ppd/HP-LaserJet_1200-hpijs.ppd.gz
 share/ppd/HP-LaserJet_1220-hpijs.ppd.gz
 share/ppd/HP-LaserJet_1300-hpijs.ppd.gz
+share/ppd/HP-LaserJet_1320-hpijs.ppd.gz
 share/ppd/HP-LaserJet_2100-hpijs.ppd.gz
 share/ppd/HP-LaserJet_2100M-hpijs.ppd.gz
 share/ppd/HP-LaserJet_2200-hpijs.ppd.gz
 share/ppd/HP-LaserJet_2300-hpijs.ppd.gz
+share/ppd/HP-LaserJet_2410-hpijs.ppd.gz
+share/ppd/HP-LaserJet_2420-hpijs.ppd.gz
+share/ppd/HP-LaserJet_2430-hpijs.ppd.gz
 share/ppd/HP-LaserJet_3200-hpijs.ppd.gz
 share/ppd/HP-LaserJet_3200m-hpijs.ppd.gz
 share/ppd/HP-LaserJet_3200se-hpijs.ppd.gz
@@ -149,13 +167,14 @@ share/ppd/HP-LaserJet_3310_MFP-hpijs.ppd.gz
 share/ppd/HP-LaserJet_3320N_MFP-hpijs.ppd.gz
 share/ppd/HP-LaserJet_3320_MFP-hpijs.ppd.gz
 share/ppd/HP-LaserJet_3330_MFP-hpijs.ppd.gz
-share/ppd/HP-LaserJet_3P_w_PCL5-hpijs.ppd.gz
 share/ppd/HP-LaserJet_4-hpijs.ppd.gz
 share/ppd/HP-LaserJet_4000-hpijs.ppd.gz
 share/ppd/HP-LaserJet_4050-hpijs.ppd.gz
 share/ppd/HP-LaserJet_4100-hpijs.ppd.gz
 share/ppd/HP-LaserJet_4200-hpijs.ppd.gz
+share/ppd/HP-LaserJet_4250-hpijs.ppd.gz
 share/ppd/HP-LaserJet_4300-hpijs.ppd.gz
+share/ppd/HP-LaserJet_4350-hpijs.ppd.gz
 share/ppd/HP-LaserJet_4L-hpijs.ppd.gz
 share/ppd/HP-LaserJet_4M-hpijs.ppd.gz
 share/ppd/HP-LaserJet_4ML-hpijs.ppd.gz
@@ -180,6 +199,8 @@ share/ppd/HP-LaserJet_8000-hpijs.ppd.gz
 share/ppd/HP-LaserJet_8100-hpijs.ppd.gz
 share/ppd/HP-LaserJet_8150-hpijs.ppd.gz
 share/ppd/HP-LaserJet_9000-hpijs.ppd.gz
+share/ppd/HP-LaserJet_9040_9050-hpijs.ppd.gz
+share/ppd/HP-LaserJet_9040_9050_MFP-hpijs.ppd.gz
 share/ppd/HP-Mopier_240-hpijs.ppd.gz
 share/ppd/HP-Mopier_320-hpijs.ppd.gz
 share/ppd/HP-OfficeJet-hpijs.ppd.gz
@@ -190,6 +211,7 @@ share/ppd/HP-OfficeJet_4100-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_4105-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_4110-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_4115-hpijs.ppd.gz
+share/ppd/HP-OfficeJet_4200-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_500-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_5105-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_5110-hpijs.ppd.gz
@@ -205,6 +227,7 @@ share/ppd/HP-OfficeJet_6100-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_6105-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_6110-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_6150-hpijs.ppd.gz
+share/ppd/HP-OfficeJet_6200-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_625-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_630-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_635-hpijs.ppd.gz
@@ -215,7 +238,11 @@ share/ppd/HP-OfficeJet_7110-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_7130-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_7140-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_720-hpijs.ppd.gz
+share/ppd/HP-OfficeJet_7200-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_725-hpijs.ppd.gz
+share/ppd/HP-OfficeJet_7300-hpijs.ppd.gz
+share/ppd/HP-OfficeJet_7400-hpijs.ppd.gz
+share/ppd/HP-OfficeJet_9100-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_D125-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_D135-hpijs.ppd.gz
 share/ppd/HP-OfficeJet_D145-hpijs.ppd.gz
@@ -246,12 +273,15 @@ share/ppd/HP-PSC_1200-hpijs.ppd.gz
 share/ppd/HP-PSC_1205-hpijs.ppd.gz
 share/ppd/HP-PSC_1210-hpijs.ppd.gz
 share/ppd/HP-PSC_1300-hpijs.ppd.gz
+share/ppd/HP-PSC_1310-hpijs.ppd.gz
+share/ppd/HP-PSC_1600-hpijs.ppd.gz
 share/ppd/HP-PSC_2110-hpijs.ppd.gz
 share/ppd/HP-PSC_2150-hpijs.ppd.gz
 share/ppd/HP-PSC_2170-hpijs.ppd.gz
 share/ppd/HP-PSC_2175-hpijs.ppd.gz
 share/ppd/HP-PSC_2210-hpijs.ppd.gz
 share/ppd/HP-PSC_2300-hpijs.ppd.gz
+share/ppd/HP-PSC_2350-hpijs.ppd.gz
 share/ppd/HP-PSC_2400-hpijs.ppd.gz
 share/ppd/HP-PSC_2500-hpijs.ppd.gz
 share/ppd/HP-PSC_370-hpijs.ppd.gz
@@ -263,15 +293,22 @@ share/ppd/HP-PSC_950-hpijs.ppd.gz
 share/ppd/HP-PSC_950xi-hpijs.ppd.gz
 share/ppd/HP-PhotoSmart_140-hpijs.ppd.gz
 share/ppd/HP-PhotoSmart_240-hpijs.ppd.gz
+share/ppd/HP-PhotoSmart_2600-hpijs.ppd.gz
+share/ppd/HP-PhotoSmart_2700-hpijs.ppd.gz
+share/ppd/HP-PhotoSmart_320-hpijs.ppd.gz
+share/ppd/HP-PhotoSmart_370-hpijs.ppd.gz
 share/ppd/HP-PhotoSmart_7150-hpijs.ppd.gz
 share/ppd/HP-PhotoSmart_7260-hpijs.ppd.gz
 share/ppd/HP-PhotoSmart_7268-hpijs.ppd.gz
 share/ppd/HP-PhotoSmart_7345-hpijs.ppd.gz
 share/ppd/HP-PhotoSmart_7350-hpijs.ppd.gz
+share/ppd/HP-PhotoSmart_7400-hpijs.ppd.gz
 share/ppd/HP-PhotoSmart_7550-hpijs.ppd.gz
 share/ppd/HP-PhotoSmart_7660-hpijs.ppd.gz
 share/ppd/HP-PhotoSmart_7760-hpijs.ppd.gz
 share/ppd/HP-PhotoSmart_7960-hpijs.ppd.gz
+share/ppd/HP-PhotoSmart_8100-hpijs.ppd.gz
+share/ppd/HP-PhotoSmart_8400-hpijs.ppd.gz
 share/ppd/HP-PhotoSmart_P100-hpijs.ppd.gz
 share/ppd/HP-PhotoSmart_P1000-hpijs.ppd.gz
 share/ppd/HP-PhotoSmart_P1100-hpijs.ppd.gz
